# paypal-rs

./: Cargo.toml
src/: client.rs  countries.rs  endpoint.rs  errors.rs  lib.rs
src/api/: invoice.rs  mod.rs  orders.rs  partner_referrals_v2.rs  payments.rs
src/data/: common.rs  hateoas.rs  invoice.rs  mod.rs  orders.rs  partner_referrals_v2.rs
src/webhook/: event.rs  mod.rs  verification.rs
tests/: orders_tests.rs
