[package]
name = "paypal-rs"
version = "0.2.6"
authors = ["Edgar <git@edgarluque.com>"]
description = "A library that wraps the paypal api asynchronously."
repository = "https://github.com/edg-l/paypal-rs/"
license = "MIT OR Apache-2.0"
keywords = ["paypal", "paypal-api"]
categories = ["api-bindings", "web-programming::http-client"]
documentation = "https://docs.rs/paypal-rs"
readme = "README.md"
edition = "2021"


[dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
chrono = { version = "0.4.24", features = ["serde"] }
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
log = "0.4.21"
bytes = "1.6.0"
derive_builder = "0.20.0"
serde_qs = "0.13.0"
thiserror = "2"
tracing = "0.1"

# Lots and lots of optional crates for webhook verification
lru = { version = "0.16.2", optional = true }
rsa = { version = "0.9.9", optional = true }
sha2 = { version = "0.10.9", optional = true , features = ["oid"] }
x509-parser = { version = "0.18.0", optional = true }
pem = { version = "3.0.6", optional = true }
crc32fast = { version = "1.5.0", optional = true }
signature = { version = "2.2.0", optional = true }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
color-eyre = "0.6.3"
wiremock = "0.6.0"

[features]
default = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
webhook = ["lru", "rsa", "sha2", "pem", "crc32fast", "signature"]
lru = ["dep:lru"]
rsa = ["dep:rsa"]
sha2 = ["dep:sha2"]
x509-parser = ["dep:x509-parser"]
pem = ["dep:pem"]
crc32fast = ["dep:crc32fast"]
signature = ["dep:signature"]
